added test and endpoint for finding offer by id, exception handler