@@ -6,6 +6,7 @@ import org.example.domain.offer.dto.OfferResponseDto;
 import org.example.domain.offer.exceptions.OfferNotFoundException;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 
 @AllArgsConstructor
@@ -14,31 +15,30 @@ public class OfferFacade {
     private final OfferRepository offerRepository;
     private final OfferService offerService;
 
-
     public List<OfferResponseDto> findAllOffers() {
         return offerRepository.findAll()
                 .stream()
-                .map(OfferMapper::mapFromOfferToOfferResponseDto)
-                .toList();
-    }
-
-    public OfferResponseDto findById(String id) {
-        return offerRepository.findById(id)
-                .map(OfferMapper::mapFromOfferToOfferResponseDto)
-                .orElseThrow(() -> new OfferNotFoundException(id));
+                .map(OfferMapper::mapFromOfferToOfferDto)
+                .collect(Collectors.toList());
     }
 
     public List<OfferResponseDto> fetchAllOffersAndSaveAllIfNotExists() {
         return offerService.fetchAllOffersAndSaveAllIfNotExists()
                 .stream()
-                .map(OfferMapper::mapFromOfferToOfferResponseDto)
+                .map(OfferMapper::mapFromOfferToOfferDto)
                 .toList();
     }
 
-    public OfferResponseDto save(OfferRequestDto offerRequestDto) {
-        Offer offer = OfferMapper.mapFromOfferRequestDtoToOffer(offerRequestDto);
-        Offer created = offerRepository.save(offer);
-        return OfferMapper.mapFromOfferToOfferResponseDto(created);
+    public OfferResponseDto findOfferById(String id) {
+        return offerRepository.findById(id)
+                .map(OfferMapper::mapFromOfferToOfferDto)
+                .orElseThrow(() -> new OfferNotFoundException(id));
+    }
+
+    public OfferResponseDto saveOffer(OfferRequestDto offerDto) {
+        final Offer offer = OfferMapper.mapFromOfferDtoToOffer(offerDto);
+        final Offer save = offerRepository.save(offer);
+        return OfferMapper.mapFromOfferToOfferDto(save);
     }
 
 
